fix dark mode for welcome message

--- a/_sass/dark-theme-button.scss
+++ b/_sass/dark-theme-button.scss
@@ -76,6 +76,7 @@ $body: #ffffff;
 $body-dark: #313a44;
 $card-bg: #ffffff;
 $card-bg-dark: #1e2732;
+$card-border: #e6e6e6;
 $body-text: #000000;
 $body-text-dark: #ffffff;
 $heading-text: #ffffff;
